--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "experience-layer",
+  "name": "profile-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run profile",
+    "start": "cross-env NODE_TLS_REJECT_UNAUTHORIZED='0' npm run profile",
     "test": "echo \"Error: no test specified\" && exit 1",
     "profile": "node profile-service.js"
   },
@@ -13,6 +13,7 @@
   "dependencies": {
     "concurrency": "^0.1.4",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2"
   }
 }
